[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/score/highscores.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Trigram.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/network/LeaderboardHTTPRequest.gd" type="Script" id=3]
[ext_resource path="res://scenes/score/score_entry.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 52
font_data = ExtResource( 2 )

[node name="Highscores" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
boardEntry = ExtResource( 4 )

[node name="Table" type="VBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 18.0

[node name="HeaderCont" type="HBoxContainer" parent="Table"]
margin_right = 768.0
margin_bottom = 24.0
size_flags_vertical = 3

[node name="NameLabel" type="Label" parent="Table/HeaderCont"]
margin_right = 380.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Name"
align = 1

[node name="ScoreLabel" type="Label" parent="Table/HeaderCont"]
margin_left = 388.0
margin_right = 768.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Score"
align = 1

[node name="TimeLabel" type="Label" parent="Table/HeaderCont"]
visible = false
margin_left = 517.0
margin_right = 768.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Time Played"
align = 1

[node name="DiedLabel" type="Label" parent="Table/HeaderCont"]
visible = false
margin_left = 582.0
margin_right = 768.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Died To"
align = 1

[node name="Scroll" type="ScrollContainer" parent="Table"]
margin_top = 32.0
margin_right = 768.0
margin_bottom = 482.0
rect_min_size = Vector2( 0, 450 )
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="EntryList" type="VBoxContainer" parent="Table/Scroll"]
margin_right = 768.0
margin_bottom = 450.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LeaderboardHTTPRequest" type="HTTPRequest" parent="."]
script = ExtResource( 3 )

[node name="LoadingLabel" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 5
size_flags_vertical = 5
custom_fonts/font = SubResource( 2 )
text = "Loading..."
align = 1
valign = 1

[node name="LoadedLabel" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 5
size_flags_vertical = 5
custom_fonts/font = SubResource( 2 )
text = "Loaded"
align = 1
valign = 1

[node name="LoadedTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Entries" type="VBoxContainer" parent="."]
margin_top = 32.0
margin_bottom = 32.0

[node name="Panel" type="Panel" parent="Entries"]
size_flags_vertical = 0

[connection signal="done" from="LeaderboardHTTPRequest" to="." method="_on_LeaderboardHTTPRequest_done"]
[connection signal="timeout" from="LoadedTimer" to="." method="_on_LoadedTimer_timeout"]
